correção da documentação
