# lib/todo_web/controllers/task/complete_task_controller.ex
@@ -1,22 +1,29 @@
 defmodule TodoWeb.Task.CompleteTaskController do
-  use PhoenixSwagger
   use TodoWeb, :controller
+  use PhoenixSwagger
 
   alias TodoWeb.FallbackController
+  alias TodoWeb.Swagger.TaskSchema
+  alias TodoWeb.Swagger.ErrorSchema
   alias TodoWeb.Task.TaskJSON
 
   action_fallback FallbackController
 
   swagger_path :handle do
-    patch("/tasks/:id/complete")
+    patch("/tasks/{id}/complete")
     summary("Complete a task")
     description("Complete a task")
     tag("Tasks")
     security([%{Bearer: []}])
 
-    response(200, "Task completed", Schema.ref(:Task))
-    response(401, "Unauthorized", Schema.ref(:Error))
-    response(404, "Task not found", Schema.ref(:Error))
+    parameter(:id, :path, :string, "Task ID", required: true)
+
+    response(200, "Task completed", Schema.ref(:Task), example: TaskSchema.task_example())
+    response(401, "Unauthorized", Schema.ref(:Error), example: ErrorSchema.error_example())
+
+    response(404, "Task not found", Schema.ref(:Error),
+      example: ErrorSchema.error_example("Task not found")
+    )
   end
 
   def handle(conn, %{"id" => id}) do
